# pico-oscilloscope

./: .gitignore  README.md
firmware/: CMakeLists.txt  lwipopts.h  main.cpp
gui/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
